--- a/Homework/Week-5/d3line.css
+++ b/Homework/Week-5/d3line.css
@@ -2,9 +2,9 @@
 Studentnumber: 10591249*/
 
 h1 {
-	font-family: Helvetica; 
-	text-align: center;
-	color: black; 
+  font-family: Helvetica; 
+  text-align: center;
+  color: black; 
 }
 
 h3 {
@@ -14,9 +14,9 @@ h3 {
 }
 
 p { 
-	font-family: Helvetica;
-	text-align: center;
-	color: black;
+  font-family: Helvetica;
+  text-align: center;
+  color: black;
 }
 
 a { 
@@ -31,4 +31,31 @@ svg {
   font-size: 13px;
   display: block;
   margin: auto;
+}
+
+div.container {
+  width: 500px;
+  height: 180px;
+  display: block;
+  margin: auto;
+  text-align: center;
+}
+
+.axis text {
+  font: 12px Helvetica;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+footer {
+  position:absolute;
+  text-align:center;
+  bottom:0;
+  width:100%;
+  height:0px;
 }
